--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <noscript>Enable JavaScript to view the page</noscript>
+    <script>
+      window.addEventListener("contextmenu",(event)=>{
+        event.preventDefault();
+      })
+    </script>
   </body>
 </html>
