--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
   </head>
   <body>
     <div id="root"></div>
+    <noscript>Enable JavaScript to view the page</noscript>
+    <script>
+      window.addEventListener("contextmenu",(event)=>{
+        event.preventDefault();
+      })
+    </script>
   </body>
 </html>
