--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script type="module" src="/src/main.jsx"></script>
     <noscript>Enable JavaScript to view the page</noscript>
     <script>
-      window.addEventListener("contextmenu",(event)=>{
-        event.preventDefault();
-      })
+      // window.addEventListener("contextmenu",(event)=>{
+      //   event.preventDefault();
+      // })
     </script>
   </body>
 </html>
